crates/csl/src/snapshots/csl__test__unsupported_version.snap
---
source: crates/csl/src/test.rs
expression: "crate::from_node::parse_as::<Style>(::indoc::indoc!(r#\"\n        <style version=\"999.0\" class=\"in-text\">\n            <citation><layout></layout></citation>\n        </style>\n    \"#)).expect_err(\"should have failed with errors\")"
---
CslError(
    [
        InvalidCsl {
            severity: Error,
            range: 0..91,
            message: "Unsupported version for variant Csl: \">=999.0.0, <999.1.0\". This engine supports 1.0.1.",
            hint: "",
        },
    ],
)
